fix: z-index

--- a/packages/design/src/components/popup/index.module.less
+++ b/packages/design/src/components/popup/index.module.less
@@ -1,6 +1,6 @@
 .popup-absolute {
     position: absolute;
-    z-index: 100;
+    z-index: 1000;
     top: -9999px;
     left: -9999px;
 }
